k8s/gateway/gateway/ing.yaml
#
# Copyright (C) 2019-2026 vdaas.org vald team <vald@vdaas.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/grpc-backend: "true"
  labels:
    name: vald-lb-gateway-ingress
    app: vald-lb-gateway-ingress
    app.kubernetes.io/name: vald
    helm.sh/chart: vald-v1.8.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: v1.8.0
    app.kubernetes.io/component: gateway-lb
  name: release-name-ingress
spec:
  defaultBackend:
    service:
      name: vald-lb-gateway
      port:
        name: grpc
  rules:
    - host: lb.gateway.vald.vdaas.org
      http:
        paths:
          - path: "/"
            backend:
              service:
                name: vald-lb-gateway
                port:
                  name: grpc
            pathType: ImplementationSpecific
          - path: "/grpc.reflection.v1alpha.ServerReflection/ServerReflectionInfo"
            backend:
              service:
                name: vald-lb-gateway
                port:
                  name: grpc
            pathType: ImplementationSpecific
          - path: "/grpc.reflection.v1.ServerReflection/ServerReflectionInfo"
            backend:
              service:
                name: vald-lb-gateway
                port:
                  name: grpc
            pathType: ImplementationSpecific
